--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "nanoid": "^5.1.6",
     "nodemon": "^3.1.11",
     "pg": "^8.17.2",
     "zod": "^4.3.5"
